# Cognitive-method-ai

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: .dockerignore  .envrc  Dockerfile  database.py  main.py  models.py  parameters.py  pyproject.toml  rag.py  schemas.py  utils.py  vertex_ai.py
app/Dockerfiles/: Dockerfile.dev  Dockerfile.prod
app/prompts/: filter_parameters.txt  query_exercises.txt
app/routers/: appointment_report.py  exercises.py  training_generation.py
app/tests/: test_appointment_report.py
app/utils/: test_endpoints.py  test_endpoints.sh
